prøver at lave main

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radar</title>
+    <link rel="stylesheet" href="style.css/forside.css">
 </head>
 <body>
-    <img src="img/landingp.png" alt="Landingpage billede">
+    <img src="img/logo.lyserood.png" alt="logo" class="logo">
+    <main>
+        <img src="img/landingp.png" alt="Landingpage billede" class="landingp">
+       
+    </main>
+    
 </body>
 </html>
