--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header>
         <a href="index.html"><img src="img/logo.lyserood.png" alt="logo" class="logo"></a>
-        <img src="img/landingp.png" alt="Landingpage billede" class="landingp">
+       
 
         <input type="checkbox" id="menu-bar"><!-- Dette er burgermenuen når skærmen bliver mindre -->
         <label for="menu-bar"><img class="menubillede" src="img/logo.lyserood.png" alt="menu" ></label>
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="#">Program</a></li>
                     <li><a href="#">Information</a></li>
-                    <li><a href="#">Støt Radar/a> </li>
+                    <li><a href="#">Støt Radar</a></li>
                     <li><a href="#">Om Radar</a></li>
                 </ul>
             </nav>
