prøver at få. min dropdown menu til at virke, men den driller

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="index.html">Program</a>
                     <ul>
-                        <li><a href="#">Kommende events/a></li>
+                        <li><a href="#">Kommende events</a></li>
                         <li><a href="#">Køb billet</a></li>
                         <li><a href="#">Ønsk en kunstner</a></li>
                     </ul>
@@ -35,7 +35,7 @@
                     <ul>
                         <li><a href="#">Støt</a></li>
                         <li><a href="#">Del dine minder</a></li>
-                        <li><a href="#">Konkurrencer</a>
+                        <li><a href="#">Konkurrencer +</a>
                             <ul>
                                 <li><a href="#">Vind billetter</a></li>
                                 <li><a href="#">Vind en gratis drink</a></li>
