header og velkommen på landingpage

--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
             </ul>
         </nav>
 </header>
+   <main>
+    <h1>Velkommen til Radar</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
+    <h2>Hold dig opdateret og tilmeld dig vores nyhedsbrev!</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
    
+</main>
         
    
     
