--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 </main>
         
    
-    
+    <footer>
+        <a href="index.html"><img src="img/logo.lyserood.png" alt="logo" class="logo"></a>
+    </footer>
 </body>
 </html>
