--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Program</a>
+                <li><a href="program.html">Program</a>
                     <ul>
-                        <li><a href="#">Kommende events</a></li>
+                        <li><a href="program.html">Kommende events</a></li>
                         <li><a href="#">Køb billet</a></li>
                         <li><a href="#">Ønsk en kunstner</a></li>
                     </ul>
@@ -60,12 +60,16 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
     <h2>Hold dig opdateret og tilmeld dig vores nyhedsbrev!</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
+    <h2>Følg med på Instagram og deltag i vores Konkurrencer</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
    
 </main>
         
    
-    <footer>
-        <a href="index.html"><img src="img/logo.lyserood.png" alt="logo" class="logo"></a>
+    <footer class="footer">
+        <a href="index.html"><img src="img/logo.lyserood.png" alt="logo" id="logo"></a>
+        <a href="index.html"><img src="img/adresse.png" alt="adresse" id="adresse"></a>
+        <a href="index.html"><img src="img/instalogo.png" alt="instagram logo" id="insta"></a>
     </footer>
 </body>
 </html>
