events og billeder laves med css grid så jeg kan lave kolonner og rækker

--- a/program.html
+++ b/program.html
@@ -59,6 +59,13 @@
     <h1>Kommende events</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
     <h2>Hold dig opdateret og tilmeld dig vores nyhedsbrev!</h2>
+
+    <section class="event">
+        <img src="program/baryl.webp" alt="baryl">
+        <img src="program/gorgeos.webp" alt="gorgeos">
+        <img src="program/ung-event.webp" alt="ung-skab">
+        <img src="program/iamjj.webp" alt="iamjj">
+    </section>
    
 </main>
         
