indkorpereret spotify i min billet side

--- a/ungskab.html
+++ b/ungskab.html
@@ -62,9 +62,22 @@
       <img src="program/billet.webp" alt="ung-skab">
     </section>
 
-    <section class="spotify">
-        
+
+    <section class="billet">
+        <h3>KØB DINE BILLETTER</h3>
+        <h4>HER</h4>
     </section>
+
+    <h5>Eller følg vores instagram og deltag i vores konkurrence, hvor vi udlodder 2xbilletter til UNG-SKAB</h5>
+
+    <section class="spotify">
+        <a href="https://open.spotify.com/artist/7JfoyGGsFgGPfhgfPvpqk8?si=1xfXFRcTQfGDqcDqwXb0YQ" target="_blank" rel="noopener noreferrer">Lyt til UNG-SKAB på Spotify</a>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/7JfoyGGsFgGPfhgfPvpqk8?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </section>
+
+   
+   
+   
 </main>
         
    
