indsat kalender som også fungerer som plakat

--- a/kalender.html
+++ b/kalender.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radar</title>
-    <link rel="stylesheet" href="style.css/program.css">
+    <link rel="stylesheet" href="style.css/kalender.css">
 </head>
 <body>
     
@@ -57,15 +57,12 @@
         </nav>
 </header>
    <main>
-    <h1>Kommende events</h1>
+    <h1>Kalender 2025</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
    
 
-    <section class="event">
-        <img src="program/baryl.webp" alt="baryl">
-        <img src="program/gorgeos.webp" alt="gorgeos">
-        <a href="ungskab.html"><img src="program/ung-event.webp" alt="ung-skab"></a>
-        <img src="program/iamjj.webp" alt="iamjj">
+    <section class="kalender">
+        <img src="program/plakat.webp" alt="kalender">
     </section>
    
 </main>
