--- a/ungskab.html
+++ b/ungskab.html
@@ -24,6 +24,7 @@
                     <ul>
                         <li><a href="#">Kommende events</a></li>
                         <li><a href="#">Køb billet</a></li>
+                        <li><a href="kalender.html">Kalender</a></li>
                         <li><a href="#">Ønsk en kunstner</a></li>
                     </ul>
                 </li>
