prøver at få et billede ind på min forside

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
    <main>
     <h1>Velkommen til Radar</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
+    <section class="billede2">
+        <img src="img/billede2.jpg" alt="billede2">
+    </section>
+   
     <h2>Hold dig opdateret og tilmeld dig vores nyhedsbrev!</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
     <h2>Følg med på Instagram og deltag i vores Konkurrencer</h2>
