--- a/program.html
+++ b/program.html
@@ -22,10 +22,10 @@
             <ul>
                 <li><a href="index.html" id="program">Program</a>
                     <ul>
-                        <li><a href="#">Kommende events</a></li>
+                        <li><a href="program.html">Kommende events</a></li>
                         <li><a href="#">Køb billet</a></li>
                         <li><a href="kalender.html">Kalender</a></li>
-                        <li><a href="#">Ønsk en kunstner</a></li>
+                        <li><a href="oensk.html">Ønsk en kunstner</a></li>
                     </ul>
                 </li>
     
