--- a/oensk.html
+++ b/oensk.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radar</title>
+    <title>Ønsk en kunstner</title>
     <link rel="stylesheet" href="style.css/program.css">
 </head>
 <body>
