redigering af billet siden

--- a/billet.html
+++ b/billet.html
@@ -63,7 +63,7 @@
             <h1>Køb billet</h1>
 
             <section class="vaelg">
-                <h2>Vælg et event</h2>
+                <h2>1. Vælg et event</h2>
                 <select id="eventvalg">
                     <option value="" disabled selected>Vælg et event...</option>
                     <option value="BARYL">BARYL</option>
@@ -73,7 +73,7 @@
                 </select>
             </section>
             <section class="billetkategori">
-                <h2>Vælg billettype</h2>
+                <h2>2. Vælg billettype</h2>
                 <form id="billet-form">
                     <label>
                         <input type="radio" name="kategori" value="voksen" required>
@@ -90,11 +90,11 @@
                 </form>
             </section>
             <section class="sidste">
-                <h3> Køb din billet</h3>
+                <h2>3. Køb din billet</h2>
                 <button id="koeb-billet">Køb billet</button>
             </section>
             <section class="bekræft">
-                <h2>Bekræft køb</h2>
+                <h2>4. Bekræft køb</h2>
                 <p id="billettekst">Tillykke! Vi glæder os til at se jer<3</p>
             </section>
         </section>
