færdig med billet og bekræftelses

--- a/tillykke.html
+++ b/tillykke.html
@@ -60,42 +60,11 @@
 </header>
     <main>
         <section class="koeb">
-            <h1>Køb billet</h1>
-
-            <section class="vaelg">
-                <h2>1. Vælg et event</h2>
-                <select id="eventvalg">
-                    <option value="" disabled selected>Vælg et event...</option>
-                    <option value="BARYL">BARYL</option>
-                    <option value="GORGEOS">GORGEOS</option>
-                    <option value="UNG-SKAB">UNG-SKAB</option>
-                    <option value="IAMJJ">IAMJJ</option>
-                </select>
+            <section class="bekræft">
+                <h2>Køb bekræftet</h2>
+                <p id="billettekst">Tillykke! Du har nu købt billet til UNG-SKAB d. 11 april 2025. Nærmere information kommer. Vi glæder os til at se dig<3</p>
+                <img src="program/billet.webp" alt="billet">
             </section>
-            <section class="billetkategori">
-                <h2>2. Vælg billettype</h2>
-                <form id="billet-form">
-                    <label>
-                        <input type="radio" name="kategori" value="voksen" required>
-                        Voksen +25 (150kr)
-                    </label>
-                    <label>
-                        <input type="radio" name="kategori" value="studerende" required>
-                        Studerende (80kr)
-                    </label>
-                    <label>
-                        <input type="radio" name="kategori" value="barn" required>
-                        Under 15 år (gratis)
-                    </label>
-                </form>
-            </section>
-            <section class="sidste">
-                <h2>3. Køb din billet</h2>
-                <a href="tillykke.html">
-                    <button id="koeb-billet">Køb billet</button>
-                </a>
-               
-           <img src="program/plakat.webp" alt="plakat" id="poster">
             
         </section>
   
