linker til alle mine sider html

--- a/billet.html
+++ b/billet.html
@@ -66,10 +66,10 @@
                 <h2>1. Vælg et event</h2>
                 <select id="eventvalg">
                     <option value="" disabled selected>Vælg et event...</option>
-                    <option value="BARYL">BARYL</option>
-                    <option value="GORGEOS">GORGEOS</option>
+                    <option value="BARYL">BARYL (udsolgt)</option>
+                    <option value="GORGEOS">GORGEOS(udsolgt)</option>
                     <option value="UNG-SKAB">UNG-SKAB</option>
-                    <option value="IAMJJ">IAMJJ</option>
+                    <option value="IAMJJ">IAMJJ(udsolgt)</option>
                 </select>
             </section>
             <section class="billetkategori">
