--- a/kalender.html
+++ b/kalender.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html" id="program">Program</a>
                     <ul>
                         <li><a href="program.html">Kommende events</a></li>
-                        <li><a href="#">Køb billet</a></li>
+                        <li><a href="billet.html">Køb billet</a></li>
                         <li><a href="kalender.html">Kalender</a></li>
                         <li><a href="oensk.html">Ønsk en kunstner</a></li>
                     </ul>
