--- a/oensk.html
+++ b/oensk.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html" id="program">Program</a>
                     <ul>
                         <li><a href="program.html">Kommende events</a></li>
-                        <li><a href="#">Køb billet</a></li>
+                        <li><a href="billet.html">Køb billet</a></li>
                         <li><a href="kalender.html">Kalender</a></li>
                         <li><a href="oensk.html">Ønsk en kunstner</a></li>
                     </ul>
@@ -89,6 +89,7 @@
         <button id="her" type="submit">Her</button>
     
     </form>
+
    
 </main>
         
