redigering af min informationsside

--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kommende events</title>
-    <link rel="stylesheet" href="style.css/program.css">
+    <link rel="stylesheet" href="style.css/info.css">
 </head>
 <body>
     
@@ -61,11 +61,26 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
    
 
-    <section class="event">
-        <img src="program/baryl.webp" alt="baryl">
-        <img src="program/gorgeos.webp" alt="gorgeos">
-        <a href="ungskab.html"><img src="program/ung-event.webp" alt="ung-skab"></a>
-        <img src="program/iamjj.webp" alt="iamjj">
+    <section class="ikoner">
+        <a href="#">
+            <img src="info/person.png" alt="ikon1">
+        </a>
+        <a href="#">
+            <img src="info/billet.png" alt="ikon2">
+        </a>
+        <a href="#">
+            <img src="info/rabat.png" alt="ikon3">
+        </a>
+        <a href="#">
+            <img src="info/lokation.info.png" alt="ikon4">
+        </a>
+        <a href="#">
+            <img src="info/garderobe.png" alt="ikon5">
+        </a>
+        <a href="#">
+            <img src="info/drink-info.png" alt="ikon6">
+        </a>
+        
     </section>
    
 </main>
