information indsættes samt billeder

--- a/info.html
+++ b/info.html
@@ -72,7 +72,7 @@
             <img src="info/rabat.png" alt="ikon3">
         </a>
         <a href="#">
-            <img src="info/lokation.info.png" alt="ikon4">
+            <img src="info/lokation.info.png" alt="ikon4" id="ikon4">
         </a>
         <a href="#">
             <img src="info/garderobe.png" alt="ikon5">
@@ -80,6 +80,43 @@
         <a href="#">
             <img src="info/drink-info.png" alt="ikon6">
         </a>
+        
+    </section>
+
+    <section class="info">
+        <article class="person">
+            <h2>Artister og program</h2>
+            <p>Ønsker du at se kommende events? Klik her</p>
+            <p>Ønsker du at se det fulde program? Klik her</p>
+            <p>Vil du gerne ønske en kunstner eller se tidligere kunstnere? Klik her</p>
+        </article>
+
+        <article class="ticket">
+            <h2>Køb billet</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium modi autem explicabo reiciendis quasi dolorem iusto, sapiente recusandae assumenda vel possimus vero facilis dolores! Quam atque tempore nobis vitae repudiandae.</p>
+            <p>Ønsker du at købe billet? Klik her</p>
+        </article>
+        <article class="priser">
+            <h2>Priser og rabat</h2>
+            <p>Vores billetpriser afhænger af arrangementet samt artisterne</p>
+            <p>Som studerende får du rabatr</p>
+            <p>Derudover kan du også deltage i vores konkurrencer på Instagram hvor du kan vinde billetter og drikkevare!</p>
+        </article>
+
+        <article class="lokation">
+            <h2>Hvor finder du Radar?</h2>
+            <p>billede af indgangen</p>
+            <p>Adresse:</p>
+            <p>Link fra google maps</p>
+        </article>
+        <article class="garderobe">
+            <h2>Hvad gør jeg med mit overtøj?</h2>
+            <p>billede af indgangen</p>
+        </article>
+        <article class="drikkevare">
+            <h2>Radars barkort</h2>
+           <img src="info/barkort.png" alt="barkort">
+        </article>
         
     </section>
    
