--- a/info.html
+++ b/info.html
@@ -86,6 +86,7 @@
     <section class="info">
         <article id="person">
             <h2>Artister og program</h2>
+            <img src="info/person.png" alt="ikon1">
             <p>Ønsker du at se kommende events? Klik her</p>
             <p>Ønsker du at se det fulde program? Klik her</p>
             <p>Vil du gerne ønske en kunstner eller se tidligere kunstnere? Klik her</p>
@@ -93,11 +94,13 @@
 
         <article id="ticket">
             <h2>Køb billet</h2>
+            <img src="info/billet.png" alt="ikon2">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium modi autem explicabo reiciendis quasi dolorem iusto, sapiente recusandae assumenda vel possimus vero facilis dolores! Quam atque tempore nobis vitae repudiandae.</p>
             <p>Ønsker du at købe billet? Klik her</p>
         </article>
         <article id="priser">
             <h2>Priser og rabat</h2>
+            <img src="info/rabat.png" alt="ikon3">
             <p>Vores billetpriser afhænger af arrangementet samt artisterne</p>
             <p>Som studerende får du rabatr</p>
             <p>Derudover kan du også deltage i vores konkurrencer på Instagram hvor du kan vinde billetter og drikkevare!</p>
@@ -105,16 +108,19 @@
 
         <article id="lokation">
             <h2>Hvor finder du Radar?</h2>
+            <img src="info/lokation.info.png" alt="ikon4" id="lokationbillede">
             <p>billede af indgangen</p>
             <p>Adresse:</p>
             <p>Link fra google maps</p>
         </article>
         <article id="garderobe">
             <h2>Hvad gør jeg med mit overtøj?</h2>
+            <img src="info/garderobe.png" alt="ikon5">
             <p>billede af indgangen</p>
         </article>
         <article id="drikkevare">
             <h2>Radars barkort</h2>
+            <img src="info/drink-info.png" alt="ikon6">
            <img src="info/barkort.png" alt="barkort">
         </article>
         
