redigering af billeder

--- a/info.html
+++ b/info.html
@@ -121,7 +121,7 @@
         <article id="drikkevare">
             <h2>Radars barkort</h2>
             <img src="info/drink-info.png" alt="ikon6">
-           <img src="info/barkort.png" alt="barkort">
+           <img src="info/barkort.png" alt="barkort" id="barkort">
         </article>
         
     </section>
