link til andre sider på hjemmesiden

--- a/info.html
+++ b/info.html
@@ -87,23 +87,23 @@
         <article id="person">
             <h2>Artister og program</h2>
             <img src="info/person.png" alt="ikon1">
-            <p>Ønsker du at se kommende events? Klik her</p>
-            <p>Ønsker du at se det fulde program? Klik her</p>
-            <p>Vil du gerne ønske en kunstner eller se tidligere kunstnere? Klik her</p>
+            <p>Ønsker du at se kommende events? <a href="program.html">Klik her</a></p>
+            <p>Ønsker du at se det fulde program? <a href="kalender.html">Klik her</a></p>
+            <p>Vil du gerne ønske en kunstner eller se tidligere kunstnere? <a href="oensk.html">Klik her</a></p>
         </article>
 
         <article id="ticket">
             <h2>Køb billet</h2>
             <img src="info/billet.png" alt="ikon2">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium modi autem explicabo reiciendis quasi dolorem iusto, sapiente recusandae assumenda vel possimus vero facilis dolores! Quam atque tempore nobis vitae repudiandae.</p>
-            <p>Ønsker du at købe billet? Klik her</p>
+            <p>Ønsker du at købe billet? <a href="billet.html">Klik her</a></p>
         </article>
         <article id="priser">
             <h2>Priser og rabat</h2>
             <img src="info/rabat.png" alt="ikon3">
             <p>Vores billetpriser afhænger af arrangementet samt artisterne</p>
             <p>Som studerende får du rabatr</p>
-            <p>Derudover kan du også deltage i vores konkurrencer på Instagram hvor du kan vinde billetter og drikkevare!</p>
+            <p>Derudover kan du også deltage i vores konkurrencer på Instagram hvor du kan vinde billetter og drikkevare! <a href="#">Klik her</a></p>
         </article>
 
         <article id="lokation">
@@ -122,6 +122,7 @@
             <h2>Radars barkort</h2>
             <img src="info/drink-info.png" alt="ikon6">
            <img src="info/barkort.png" alt="barkort" id="barkort">
+           <p>Vind gratis drikkevare ved at dele dine oplevelser på instagram! Læs mere <a href="#">Her</a></p>
         </article>
         
     </section>
