--- a/info.html
+++ b/info.html
@@ -110,7 +110,7 @@
             <h2>Hvor finder du Radar?</h2>
             <img src="info/lokation.info.png" alt="ikon4" id="lokationbillede">
             <p>billede af indgangen</p>
-            <p>Adresse:</p>
+            <p><a href="https://maps.app.goo.gl/zyf7MbGJWTgWNu4VA">Karen Wegeners Gade 6, 8000 Aarhus</a></p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2222.224821141153!2d10.191550577045948!3d56.15321737323513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c3fed72fbd781%3A0xcc2e3a589a69875c!2sRadar!5e0!3m2!1sda!2sdk!4v1733918612119!5m2!1sda!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
         <article id="garderobe">
