--- a/tillykke.html
+++ b/tillykke.html
@@ -31,7 +31,7 @@
                     </ul>
                 </li>
     
-                <li><a href="index.html">Information</a>
+                <li><a href="info.html">Information</a>
                 </li>
     
                 <li><a href="index.html">Støt Radar</a>
