--- a/program.html
+++ b/program.html
@@ -29,7 +29,7 @@
                     </ul>
                 </li>
     
-                <li><a href="info.html">Information</a>
+                <li><a href="info.html" id="info-nav">Information</a>
                 </li>
     
                 <li><a href="index.html">Støt Radar</a>
