--- a/stot.html
+++ b/stot.html
@@ -57,15 +57,12 @@
         </nav>
 </header>
    <main>
-    <h1>Kommende events</h1>
+    <h1>Støt Radar</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
    
 
-    <section class="event">
-        <img src="program/baryl.webp" alt="baryl">
-        <img src="program/gorgeos.webp" alt="gorgeos">
-        <a href="ungskab.html"><img src="program/ung-event.webp" alt="ung-skab"></a>
-        <img src="program/iamjj.webp" alt="iamjj">
+    <section class="infographic">
+        <img src="stoet/stoet-hv.psb" alt="spørgsmål">
     </section>
    
 </main>
