--- a/stot.html
+++ b/stot.html
@@ -32,7 +32,7 @@
                 <li><a href="info.html" id="info-nav">Information</a>
                 </li>
     
-                <li><a href="stot.html">Støt Radar</a>
+                <li><a href="stot.html" id="stott">Støt Radar</a>
                     <ul>
                         <li><a href="stot.html">Støt</a></li>
                         <li><a href="del.html">Del dine minder</a></li>
