--- a/stot.html
+++ b/stot.html
@@ -62,7 +62,7 @@
    
 
     <section class="infographic">
-        <img src="stoet/stoet-hv.psb" alt="spørgsmål">
+        <img src="stoet/spg.png" alt="spørgsmål">
     </section>
    
 </main>
