--- a/stot.html
+++ b/stot.html
@@ -64,7 +64,8 @@
     <section class="infographic">
         <img src="stoet/spg.png" alt="spørgsmål">
     </section>
-   
+    <h2>Hvorfor skal du støtte Radar</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus totam cumque, autem necessitatibus, sit sunt cupiditate illo ducimus dignissimos eum labore quae impedit fugit quidem perferendis reiciendis exercitationem nemo debitis.</p>
 </main>
         
    
