--- a/stot.html
+++ b/stot.html
@@ -63,7 +63,11 @@
 
     <section class="infographic">
         <img src="stoet/spg.png" alt="spørgsmål">
+        <article class="circle">
+            <span class="text">Bliv frivillig</span>
+        </article>
     </section>
+    
     <h2>Hvorfor skal du støtte Radar</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus totam cumque, autem necessitatibus, sit sunt cupiditate illo ducimus dignissimos eum labore quae impedit fugit quidem perferendis reiciendis exercitationem nemo debitis.</p>
 </main>
