--- a/stot.html
+++ b/stot.html
@@ -69,17 +69,17 @@
         <article class="circle1">
             <p>Bliv frivillig</p>
         </article>
-        <article class="circle">
+        <article class="circle2">
+            <p>Doner</p>
+        </article>
+        <article class="circle3">
             <p>Bliv frivillig</p>
         </article>
-        <article class="circle">
-            <p>Bliv frivillig</p>
+        <article class="circle4">
+            <p>Følg os på Instagram</p>
         </article>
-        <article class="circle">
-            <p>Bliv frivillig</p>
-        </article>
-        <article class="circle">
-            <p>Bliv frivillig</p>
+        <article class="circle5">
+            <p>Del dine minder</p>
         </article>
        
     </section>
