stadig igang med burgermenu landingpage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
         <nav class="navbar">
             <ul>
-                <li><a href="program.html">Program</a>
+                <li><a href="program.html" id="eventss">Program</a>
                     <ul>
                         <li><a href="program.html">Kommende events</a></li>
                         <li><a href="billet.html">Køb billet</a></li>
