--- a/billet.html
+++ b/billet.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Køb billet
-    </title>
+    <title>Køb billet</title>
+    <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/billet.css">
 </head>
 <body>
