--- a/program.html
+++ b/program.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kommende events</title>
+    <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/program.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
        
 
         <input type="checkbox" id="menu-bar"><!-- Dette er burgermenuen når skærmen bliver mindre -->
-        <label for="menu-bar"><img class="menubillede" src="img/logo.lyserood.png" alt="menu" ></label>
+        <label for="menu-bar"><img class="menubillede" src="img/burger.png" alt="menu" ></label>
            
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar">Menu</label>
