--- a/stot.html
+++ b/stot.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kommende events</title>
+    <title>Støt Radar</title>
+    <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/stot.css">
 </head>
 <body>
