--- a/ungskab.html
+++ b/ungskab.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Køb billet til ung-skab</title>
+    <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/ungskab.css">
 </head>
 <body>
