ædrning af farver

--- a/stot.html
+++ b/stot.html
@@ -58,6 +58,7 @@
         </nav>
 </header>
    <main>
+    <section class="infog">
     <h1>Støt Radar</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
    
@@ -83,7 +84,7 @@
             <p>Del dine minder</p>
         </article>
     </section>
-    
+</section>
    
        
    
