har ændret baggrunden så den ikke er så skarp

--- a/stot.html
+++ b/stot.html
@@ -69,19 +69,50 @@
     
     <section class="cirkler">
         <article id="circle1">
-        <p>Bliv frivillig</p>
+        <input type="checkbox" id="tryk1" hidden>
+        <label for="tryk1" class="open">Bliv frivillig</label>
+        <section class="popup">
+            <p>Du kan melde dig som frivillig og støtte Radar!</p>
+            <label for="tryk1" class="close">Luk</label>
+            <input type="checkbox" id="close1" hidden>
+            </section>
         </article>
+
         <article id="circle2">
-            <p>Doner</p>
+            <input type="checkbox" id="tryk2" hidden>
+        <label for="tryk2" class="open">Følg os på Instagram</label>
+        <section class="popup">
+            <p>Du kan melde dig som frivillig og støtte Radar!</p>
+            <label for="tryk2" class="close">Luk</label>
+            <input type="checkbox" id="close2" hidden>
+            </section>
         </article>
         <article id="circle3">
-            <p>Bliv frivillig</p>
+            <input type="checkbox" id="tryk3" hidden>
+        <label for="tryk3" class="open">Donér</label>
+        <section class="popup">
+            <p>Du kan melde dig som frivillig og støtte Radar!</p>
+            <label for="tryk3" class="close">Luk</label>
+            <input type="checkbox" id="close3" hidden>
+            </section>
         </article>
         <article id="circle4">
-            <p>Følg os på Instagram</p>
+            <input type="checkbox" id="tryk4" hidden>
+            <label for="tryk4" class="open">Køb billet</label>
+            <section class="popup">
+                <p>Du kan melde dig som frivillig og støtte Radar!</p>
+                <label for="tryk4" class="close">Luk</label>
+                <input type="checkbox" id="close4" hidden>
+                </section>
         </article>
         <article id="circle5">
-            <p>Del dine minder</p>
+            <input type="checkbox" id="tryk5" hidden>
+            <label for="tryk5" class="open">Del dine minder</label>
+            <section class="popup">
+                <p>Du kan melde dig som frivillig og støtte Radar!</p>
+                <label for="tryk5" class="close">Luk</label>
+                <input type="checkbox" id="close5" hidden>
+                </section>
         </article>
     </section>
 </section>
