--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         
     </form>
 
-    <h2>Følg med på Instagram og deltag i vores konkurrencer</h2>
+    <h2 id="instaskrift">Følg med på Instagram og deltag i vores konkurrencer</h2>
     <section class="instagram">  
         <p id="instatekst">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>    
       
