--- a/program.html
+++ b/program.html
@@ -35,7 +35,7 @@
     
                 <li><a href="index.html">Støt Radar</a>
                     <ul>
-                        <li><a href="#">Støt</a></li>
+                        <li><a href="stot.html">Støt</a></li>
                         <li><a href="#">Del dine minder</a></li>
                         <li><a href="#">Konkurrencer +</a>
                             <ul>
