--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h1>Velkommen til Radar</h1>
     <section class="billede2">
    
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
+    <p>Hos Radar brænder vi for, at støtte artister, som eksperimenter med musikken og forskellige nichegenre. Vores lokale spillested er et kulturelt samlingspunkt, hvor du kan opleve autentiske musikoplevelser i en atmosfære, der hylder diversitet, rummelighed og accept. Radar er et åbent rum, hvor både kunstnere og publikum kan være sig selv og dele deres kærlighed til musikken</p>
         <img src="img/billede2.jpg" alt="billede">
     </section>
    
