--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <form class="nyhedsbrev" action="kalender.html" method="post">
         <article>
             <h2>Hold dig opdateret og tilmeld dig vores nyhedsbrev!</h2>
-        <p id="undertekst">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores dolor officiis nostrum exercitationem mollitia, est veniam temporibus commodi facere quis harum vitae excepturi sunt officia provident earum eligendi velit! Odio!</p>
+        <p id="undertekst">Det betyder utroligt meget for os, at vores gæster holder sig opdateret. Vi ønsker at nå ud til så mange som muligt, for at formidle vores kulturelle univers. Tilmeld dig vores nyhedsbrev, og få besked om kommende koncerter, spændende events og tilbud!</p>
         </article>
         <section class="nyhedsb">
             <label for="fornavn">Fornavn:</label>
