--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <section class="betingelser">
                 <label>
                     <input type="checkbox" id="betingelser" name="betingelser" required>
-                    <p>Jeg accepterer Radars handelsbetingelser og at Radar må sende mig information omkring nye events mm.</p>
+                    <p>Jeg accepterer Radars handelsbetingelser, og at Radar må sende mig information omkring nye events, kampagner mm.</p>
                     
                 </label>
             </section>
