--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <h2 id="instaskrift">Følg med på Instagram og deltag i vores konkurrencer</h2>
     <section class="instagram">  
-        <p id="instatekst">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>    
+        <p id="instatekst">Vi afslører løbende artister, kommende events samt diverse konkurrencer på vores Instagram. Hvis du ønsker at holde dig opdateret eller vinde billetter og gratis drikkevare, så besøg Radar via billedet nedenfor, og bliv en del af vores community allerede i dag!</p>    
       
         <a href="https://www.instagram.com/radarlive/?hl=da">
         <img src="program/instagram.png" alt="instagramopslag">
