--- a/kalender.html
+++ b/kalender.html
@@ -59,7 +59,10 @@
 </header>
    <main>
     <h1>Kalender 2025</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
+    <p>Forårets program på Radar 2025 er endelig klar! Vi har skabt et line-up, der hylder nichegenrer og artister, som virkelig brænder for musikken, men ikke mindst at give dig én på opleveren. Det bliver en sæson fyldt med autenticitet og dedikation – vi glæder os til at dele det med dig!
+        Efterårets program er stadig under udarbejdelse, og vi vil i den forbindelse gerne høre din mening. Har du en upcoming artist, som du tænker passer perfekt ind hos Radar? Klik her og vær med til at forme Radars fremtidige line-up.
+        Husk at følge os på Instagram, hvor vi løbende afslører resten af programmet – og måske giver dig chancen for at vinde billetter til kommende koncerter.
+        </p>
    
 
     <section class="kalender">
