--- a/oensk.html
+++ b/oensk.html
@@ -59,7 +59,10 @@
 </header>
    <main>
     <h1>Ønsk en kunstner</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
+    <p>Hos Radar brænder vi for at give dig unikke koncertoplevelser, og nu har du chancen for at have indflydelse på, hvem der spiller på Radar!
+        Kender du en upcoming artist, der fortjener spotlightet på vores lokalt kulturelle spillested i vores autentiske atmosfære? Vi brænder for at høre din mening og udvide vores horisont af eksperimenternde artister. Det kan være, at det netop er dit ønske, som går i opfyldelse!
+        Længere nede på siden kan du sende os dit ønske! Sammen skaber vi Radar. 
+        </p>
    
     <h2>Tidligere kunstnere</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
