--- a/oensk.html
+++ b/oensk.html
@@ -65,7 +65,7 @@
         </p>
    
     <h2>Tidligere kunstnere</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
+    <p>Du kender helt sikkert The Minds of 99, Jada, Barselona og andre store danske artister. Vidste du, at disse kunstnere har haft deres spæde start på Radar? Gennem årtier har vi været med til at skabe en oplevelse for artister, fordi vi vælger at tro på, at deres eksperimenterende måde til musikken er vejen fremad. I dag har de slået igennem musikbranchen, netop fordi de valgte at tro på dem selv, og det er vi hos Radar meget stolte af, at være en del af denne rejse. Og hvem ved, måske er du netop med til at vælge den næste store revolution i dansk musik? </p>
    
     <section class="tidligere">
        <img src="tidligere/minds.webp" alt="mindsof99">
