--- a/info.html
+++ b/info.html
@@ -59,7 +59,7 @@
 </header>
    <main>
     <h1>Praktisk information</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste inventore optio ullam quod voluptates officiis voluptatem, deserunt hic assumenda? Aliquam dolorum libero assumenda, tenetur quisquam eveniet ipsam expedita omnis accusantium?</p>
+    <p>På denne side finder du al den praktiske information og svar på de mest stillede spørgsmål. Klik på ikonerne nedenfor for at finde de oplysninger, du behøver</p>
    
 
     <section class="ikoner">
@@ -88,16 +88,20 @@
         <article id="person">
             <h2>Artister og program</h2>
             <img src="info/person.png" alt="ikon1">
-            <p>Ønsker du at se kommende events? <a href="program.html">Klik her</a></p>
-            <p>Ønsker du at se det fulde program? <a href="kalender.html">Klik her</a></p>
-            <p>Vil du gerne ønske en kunstner eller se tidligere kunstnere? <a href="oensk.html">Klik her</a></p>
+            <h3>Ønsker du at udforske lineuppet for 2025?</h3>
+            <p>Se hvilke artister vi præsenterer i løbet af foråret! <a href="program.html">Klik her</a></p>
+            <h3>Vil du se det fulde program for foråret 2025?</h3>
+            <p>Find alle de fantastiske artister og få et overblik! <a href="kalender.html">Klik her</a></p>
+            <h3>Har DU en upcoming i tankerne?</h3>
+            <p>Du kan læse om vores tidligere artister, og ønske en specifik upcoming artist. <a href="oensk.html">Klik her</a></p>
         </article>
 
         <article id="ticket">
             <h2>Køb billet</h2>
             <img src="info/billet.png" alt="ikon2">
+            <h3></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium modi autem explicabo reiciendis quasi dolorem iusto, sapiente recusandae assumenda vel possimus vero facilis dolores! Quam atque tempore nobis vitae repudiandae.</p>
-            <p>Ønsker du at købe billet? <a href="billet.html">Klik her</a></p>
+            <p>Ved du allerede hvem du vil høre? Køb din billet allerede i dag! <a href="billet.html">Find dine billetter</a></p>
         </article>
         <article id="priser">
             <h2>Priser og rabat</h2>
