--- a/info.html
+++ b/info.html
@@ -99,8 +99,7 @@
         <article id="ticket">
             <h2>Køb billet</h2>
             <img src="info/billet.png" alt="ikon2">
-            <h3></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium modi autem explicabo reiciendis quasi dolorem iusto, sapiente recusandae assumenda vel possimus vero facilis dolores! Quam atque tempore nobis vitae repudiandae.</p>
+            <h3>Køb før det er for sent</h3>
             <p>Ved du allerede hvem du vil høre? Køb din billet allerede i dag! <a href="billet.html">Find dine billetter</a></p>
         </article>
         <article id="priser">
