--- a/info.html
+++ b/info.html
@@ -99,15 +99,14 @@
         <article id="ticket">
             <h2>Køb billet</h2>
             <img src="info/billet.png" alt="ikon2">
-     
             <p>Er du klar til en uforglemmelig koncertoplevelse? Sørg for at sikre dig billetter til de kommende events, før de er udsolgt! <a href="billet.html">Find dine billetter her</a> og vær en del af atmosfæren, hvor musik og fællesskab mødes. Vi glæder os til at byde dig velkommen!</p>
         </article>
         <article id="priser">
             <h2>Priser og rabat</h2>
             <img src="info/rabat.png" alt="ikon3">
-            <h3></h3>
+            <h3>Pris og studierabat</h3>
             <p>Vores billetpriser afhænger af arrangementet samt artisterne</p>
-            <p>Som studerende får du rabatr</p>
+            <h3>Vind dine billetter</h3>
             <p>Derudover kan du også deltage i vores konkurrencer på Instagram hvor du kan vinde billetter og drikkevare! <a href="#">Klik her</a></p>
         </article>
 
