--- a/info.html
+++ b/info.html
@@ -105,15 +105,15 @@
             <h2>Priser og rabat</h2>
             <img src="info/rabat.png" alt="ikon3">
             <h3>Pris og studierabat</h3>
-            <p>Vores billetpriser afhænger af arrangementet samt artisterne</p>
+            <p>Billetpriserne kan variere afhængigt af kunstneren og eventet, men én ting er sikkert: som studerende får du rabat på alle vores koncerter! Det betyder, at du kan opleve dine yndlingsartister til en endnu bedre pris.</p>
             <h3>Vind dine billetter</h3>
-            <p>Derudover kan du også deltage i vores konkurrencer på Instagram hvor du kan vinde billetter og drikkevare! <a href="#">Klik her</a></p>
+            <p>Vi afholder løbende konkurrencer på vores Instagram, hvor du kan vinde billetter til kommende events og få adgang til eksklusive tilbud. Følg os og vær med i konkurrencerne – måske er det dig, der vinder! <a href="#">Klik her</a></p>
         </article>
 
         <article id="lokation">
             <h2>Hvor finder du Radar?</h2>
             <img src="info/lokation.info.png" alt="ikon4" id="lokationbillede">
-            <p>billede af indgangen</p>
+            <p>Radar ligger centralt i Aarhus, tæt på byens livlige hjerte. Du finder os på [adresse], hvor vi byder dig velkommen til en unik musikoplevelse. Uanset om du kommer til fods, med cykel eller offentlige transportmidler, er vi lette at finde – kom og oplev den autentiske stemning på Radar!</p>
             <p><a href="https://maps.app.goo.gl/zyf7MbGJWTgWNu4VA">Karen Wegeners Gade 6, 8000 Aarhus</a></p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2222.224821141153!2d10.191550577045948!3d56.15321737323513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c3fed72fbd781%3A0xcc2e3a589a69875c!2sRadar!5e0!3m2!1sda!2sdk!4v1733918612119!5m2!1sda!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
