--- a/info.html
+++ b/info.html
@@ -120,13 +120,16 @@
         <article id="garderobe">
             <h2>Hvad gør jeg med mit overtøj?</h2>
             <img src="info/garderobe.png" alt="ikon5">
-            <p>billede af indgangen</p>
+            <p>For kun 15 kr. kan du opbevare dit tøj sikkert i vores garderobe under hele koncerten. Vi anbefaler, at du bruger garderoben til at opbevare overtøj og tasker, så du kan nyde musikken uden bekymringer. Husk at hente dine ejendele, når eventet er slut!</p>
         </article>
         <article id="drikkevare">
             <h2>Radars barkort</h2>
+            <h3>Køb og klip!</h3>
+            <p>Med Radars barkort kan du få et klippekort, der giver dig rabat på drikkevarer til vores koncerter. For mange er Radar også det perfekte sted at sparke en god aften i gang, hvor du kan nyde en drink – både med og uden alkohol. Vi tilbyder et udvalg af lækre sodavand og alkoholfrie alternativer, så alle kan finde noget at nyde, mens de oplever fantastisk musik. Skaf dit barkort og få mere ud af din aften hos os!</p>
             <img src="info/drink-info.png" alt="ikon6">
            <img src="info/barkort.png" alt="barkort" id="barkort">
-           <p>Vind gratis drikkevare ved at dele dine oplevelser på instagram! Læs mere <a href="#">Her</a></p>
+          
+           <p>Vind gratis drikkevare ved at dele dine oplevelser på instagram! Læs mere <a href="del.html">Her</a></p>
         </article>
         
     </section>
